# rules_ent

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  defs.bzl  deps.bzl  go.mod  go.sum  repositories.bzl  workspace.bzl
cmd/generate/: BUILD.bazel  main.go
example/: go.mod
example/protos/: BUILD.bazel  user_settings.proto
example/schema/: BUILD.bazel  user.go
