load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "user_settings_proto",
    srcs = ["user_settings.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "user_settings_go_proto",
    importpath = "github.com/cloneable/rules_ent/example/protos",
    proto = ":user_settings_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":user_settings_go_proto"],
    importpath = "github.com/cloneable/rules_ent/example/protos",
    visibility = ["//visibility:public"],
)
