load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:defs.bzl", "go_ent_library")

go_library(
    name = "schema",
    srcs = ["user.go"],
    importpath = "github.com/cloneable/rules_ent/example/schema",
    visibility = ["//visibility:public"],
    deps = [
        "//example/protos:proto",
        "@com_github_google_uuid//:uuid",
        "@io_entgo_ent//:ent",
        "@io_entgo_ent//schema/field",
        "@io_entgo_ent//schema/mixin",
    ],
)

go_ent_library(
    name = "db",
    entities = [
        "user",
    ],
    gomod = "//:go_mod",
    importpath = "github.com/cloneable/rules_ent/example/db",
    schema = ":schema",
    visibility = ["//:__subpackages__"],
)
